--- a/GameData/AxialAerospace/SimpleCargoSolutions/readme.htm
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/readme.htm
@@ -83,23 +83,22 @@ getting around. `</p>
 <hr />
 <h3 id="parts">Parts</h3>
 <ul>
-<li>Adds ten (10) stockalike parts to Kerbal Space Program
+<li>Adds eight (9) stockalike parts to Kerbal Space Program
 <ul>
 <li>Cargo Bays
 <ul>
-<li>0.625m Cargo Bay</li>
-<li>1.25m Cargo Bay</li>
-<li>2.5m Cargo Bay</li>
-<li>1.875m Cargo Bay</li>
-<li>2.5m Cargo Bay</li>
-<li>3.75m Cargo Bay</li>
-<li>5.0m Cargo Bay</li>
-<li>5.0m Cargo Bay (tall)</li>
+<li>0.625m</li>
+<li>1.25m</li>
+<li>1.875m</li>
+<li>2.5m</li>
+<li>3.75m</li>
+<li>5.0m</li>
+<li>5.0m (tall)</li>
 </ul></li>
 <li>Low-Profile Docking Ports
 <ul>
-<li>Cargo Bay 'low-profile(LP)' docking port size0 (Junior)</li>
-<li>Cargo Bay 'low-profile(LP)' docking port size1</li>
+<li><em>Low Profile (LP)</em> docking port size0 (Junior)</li>
+<li><em>Low Profile (LP)</em> docking port size1</li>
 </ul></li>
 </ul></li>
 </ul>
