--- a/GameData/AxialAerospace/SimpleCargoSolutions/readme.htm
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/readme.htm
@@ -83,7 +83,7 @@ getting around. `</p>
 <hr />
 <h3 id="parts">Parts</h3>
 <ul>
-<li>Adds eight (9) stockalike parts to Kerbal Space Program
+<li>Adds nine (9) stockalike parts to Kerbal Space Program
 <ul>
 <li>Cargo Bays
 <ul>
@@ -229,8 +229,14 @@ title="zer0Kerbal">zer0Kerbal</a></h4>
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/207351-*/"
 title="DaMichel&#39;s CargoBays (DM/CB)">DaMichel's Cargo Bays
 (DMCB)</a></li>
-<li>[DaMichel's AeroRadial (DMAR)][DMAR]</li>
-<li>[DaMichel's Flat Fuselage (DMFF)][DMFF]</li>
+<li><a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/208118-*/"
+title="DaMichel&#39;s AeroRadial (DM/A)">DaMichel's AeroRadial
+(DMAR)</a></li>
+<li><a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/208131-*/"
+title="DaMichel&#39;s Fuselage (DM/F)">DaMichel's Flat Fuselage
+(DMFF)</a></li>
 <li><a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/208140-*/"
 title="DaMichel&#39;s SphericalTanks(DM/ST)">DaMichel's Spherical Tanks
