--- a/GameData/AxialAerospace/SimpleCargoSolutions/1.1.99.0.htm
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/1.1.99.0.htm
@@ -33,8 +33,180 @@ title="GitHub IO" alt="Pages" /></a></p>
 <div style="border:0.5px solid Tomato; background-color: #bada55; color: #FF0000; text-align:center"><h4>
 <b>DO A CLEAN INSTALL:</br> DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/SimpleCargoSolutions/files">CurseForge</a></p></div>
 
-<h2 id="summary">Summary</h2>
-<h3 id="changes">Changes</h3>
+<h3 id="adoption-by-zer0kerbal">Adoption by zer0Kerbal</h3>
+<h3 id="localization-11990">Localization 1.1.99.0</h3>
+<ul>
+<li>Added
+<ul>
+<li>.this/Localization/</li>
+<li>added localization (en-us.cfg)</li>
+<li>adjusted phrasing a smudge</li>
+</ul></li>
+<li>Create
+<ul>
+<li>Localization directory and contents
+<ul>
+<li>Localization/
+<ul>
+<li>&lt;en-us.cfg&gt;</li>
+<li>[readme.md] v2.1.2.0</li>
+<li>[quickstart.md] v1.0.1.1</li>
+</ul></li>
+</ul></li>
+</ul></li>
+<li>Add localized tags to parts</li>
+<li>Create &lt;SimpleCargoSolutions.cfg&gt; v1.0.0.0</li>
+<li>updates #10 - Localization - Master</li>
+<li>closes #11 - Localization - English &lt;en-us.cfg&gt;</li>
+<li>closes #36 - Create Localization directory and contents</li>
+<li>closes #38 - Create &lt;SimpleCargoSolutions.cfg&gt;</li>
+</ul>
+<h3 id="part-asset-updates-11990">Part Asset Updates 1.1.99.0</h3>
+<ul>
+<li>create Assets/ folder</li>
+<li>convert from mesh to MODEL {}</li>
+<li>rename
+<ul>
+<li>models to unique names</li>
+<li>textures to unique names</li>
+</ul></li>
+<li>update
+<ul>
+<li>model pointers (.png et al to .dds)</li>
+<li>model texture pointers to new names</li>
+</ul></li>
+<li>relocate assets to Assets/</li>
+<li>eliminate
+<ul>
+<li>duplicate textures</li>
+<li>duplicate models</li>
+</ul></li>
+<li>relocate part.cfg to Parts/</li>
+<li>closes #37 - Part Asset Updates</li>
+</ul>
+<h3 id="documentation-11990">Documentation 1.1.99.0</h3>
+<ul>
+<li>Create GitHub Pages
+<ul>
+<li>docs/
+<ul>
+<li>[<code>_config.yml</code>]</li>
+<li>[Attribution.md] v1.0.7.1</li>
+<li>[ManualInstallation.md] v1.1.8.0</li>
+<li>[404.md] v1.0.3.2</li>
+<li>[LegalMumboJumbo.md] v1.0.5.1</li>
+<li>[Localizations.md] v1.1.7.0</li>
+<li>[Marketing.md] v1.0.1.0</li>
+<li>[Notices.md] v1.0.1.0</li>
+<li>[PartsCatalog.md] v1.1.4.1</li>
+<li>[Why.md] v1.1.0.0</li>
+</ul></li>
+</ul></li>
+<li>Create Documentation
+<ul>
+<li>readme</li>
+<li>deploy to:
+<ul>
+<li>CurseForge Description page 🤬</li>
+<li>Forum Original Post 🐰</li>
+<li>SpaceDock Information page 🌮</li>
+</ul></li>
+<li>release notes</li>
+<li>[changelog.md]</li>
+<li>update /docs/</li>
+</ul></li>
+<li>Create
+<ul>
+<li>HeroLogo.png</li>
+<li>copy/convert to HeroLogo.jpg</li>
+</ul></li>
+<li>closes #34 - Create HeroLogo.png</li>
+<li>closes #33 - Create GitHub Pages</li>
+</ul>
+<h3 id="legal-mumbo-jumbo-11990">Legal Mumbo Jumbo 1.1.99.0</h3>
+<ul>
+<li>Create
+<ul>
+<li>license check</li>
+<li>offline documentation</li>
+<li>_Legal
+<ul>
+<li>screenshots and pdfs</li>
+<li>adoptionLetters</li>
+<li>communications concerning</li>
+</ul></li>
+<li>_Links/
+<ul>
+<li>link(s) saved</li>
+</ul></li>
+<li>docs/LegalMumboJumbo
+<ul>
+<li>[License.md]</li>
+<li>FORUM-##.png's
+<ul>
+<li>public documentation</li>
+</ul></li>
+</ul></li>
+<li>GitHub: :octocat:
+<ul>
+<li>LICENSE</li>
+<li>[license].txt</li>
+</ul></li>
+<li>CurseForge</li>
+<li>SpaceDock</li>
+<li>CKAN</li>
+</ul></li>
+</ul>
+<h3 id="parts-11990">Parts 1.1.99.0</h3>
+<ul>
+<li>modernization, polish, update pass on .cfg
+<ul>
+<li>explosionPotential</li>
+<li>merged in patches</li>
+<li>adjusted nodes (flipped orientation as needed)</li>
+</ul></li>
+</ul>
+<h3 id="license-11990">License 1.1.99.0</h3>
+<ul>
+<li>Update
+<ul>
+<li>Updated License: GPL-2.0
+<ul>
+<li>was: WTFPL</li>
+<li>Originally: LGPL-3.0</li>
+</ul></li>
+</ul></li>
+<li>closes #39 - Update License</li>
+</ul>
+<h3 id="archival-releases">Archival Releases</h3>
+<ul>
+<li>Releases
+<ul>
+<li>1.1.0.0-archival</li>
+<li>1.0.5.0-archival</li>
+</ul></li>
+<li>closes #35 - Archival Releases</li>
+</ul>
+<h3 id="status-11990">Status 1.1.99.0</h3>
+<ul>
+<li>Issues
+<ul>
+<li>closes #29 - Simple Cargo Solutions (CARGO) 1.1.99.0-adoption
+<Thank you artwhaley> edition</li>
+<li>closes #30 - 1.1.99.0 Create Legal Mumbo Jumbo</li>
+<li>closes #31 - 1.1.99.0 Create Documentation</li>
+<li>closes #32 - 1.1.99.0 Create Social Media Presence</li>
+<li>closes #27 - Update AA Simple Cargo Solutions</li>
+<li>closes #2 - Social</li>
+<li>closes #3 - Localization</li>
+<li>closes #4 - LegalMumboJumbo</li>
+<li>closes #5 - Adoption</li>
+<li>closes #6 - Repo</li>
+<li>closes #7 - Cargo</li>
+<li>closes #8 - Needs a wiki</li>
+<li>#9 - [ImgBot] Optimize images - contributed by imgbot[bot]</li>
+</ul></li>
+</ul>
 <hr />
 <h2 id="see-more">See More</h2>
 <ul>
